Fix login page icon sizes - reduce oversized icons for better UX

--- a/public/login.html
+++ b/public/login.html
@@ -45,16 +45,15 @@
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
-    <div class="login-container rounded-2xl shadow-2xl p-8 w-full max-w-md">
-        <!-- ヘッダー -->
+    <div class="login-container rounded-2xl shadow-2xl p-8 w-full max-w-md">        <!-- ヘッダー -->
         <div class="text-center mb-8">
-            <div class="w-20 h-20 mx-auto mb-4 bg-white rounded-full flex items-center justify-center shadow-lg">
-                <svg class="w-10 h-10 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <div class="w-12 h-12 mx-auto mb-4 bg-white rounded-full flex items-center justify-center shadow-lg">
+                <svg class="w-6 h-6 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.746 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
                 </svg>
             </div>
-            <h1 class="text-3xl font-bold text-white mb-2">あたしんち学習アプリ</h1>
-            <p class="text-white/80">司法試験対策システム</p>
+            <h1 class="text-2xl font-bold text-white mb-2">あたしんち学習アプリ</h1>
+            <p class="text-white/80 text-sm">司法試験対策システム</p>
         </div>
 
         <!-- ログインフォーム -->
@@ -98,13 +97,12 @@
                         class="input-field w-full px-4 py-3 pr-12 rounded-lg focus:outline-none focus:ring-0 transition-all"
                         placeholder="パスワードを入力"
                         autocomplete="current-password"
-                    >
-                    <button 
+                    >                    <button 
                         type="button" 
                         id="togglePassword" 
                         class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 transition-colors"
                     >
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
                         </svg>
@@ -117,9 +115,8 @@
                 type="submit" 
                 id="loginBtn"
                 class="login-btn w-full py-3 px-4 rounded-lg text-white font-medium focus:outline-none focus:ring-4 focus:ring-indigo-300 transition-all"
-            >
-                <span id="loginBtnText">ログイン</span>
-                <svg id="loginBtnSpinner" class="hidden animate-spin w-5 h-5 ml-2 inline" fill="none" viewBox="0 0 24 24">
+            >                <span id="loginBtnText">ログイン</span>
+                <svg id="loginBtnSpinner" class="hidden animate-spin w-4 h-4 ml-2 inline" fill="none" viewBox="0 0 24 24">
                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                     <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                 </svg>
@@ -156,22 +153,20 @@
         const loginBtnText = document.getElementById('loginBtnText');
         const loginBtnSpinner = document.getElementById('loginBtnSpinner');
         const togglePasswordBtn = document.getElementById('togglePassword');
-        const passwordInput = document.getElementById('password');
-
-        // パスワード表示/非表示切り替え
+        const passwordInput = document.getElementById('password');        // パスワード表示/非表示切り替え
         togglePasswordBtn.addEventListener('click', () => {
             const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
             passwordInput.setAttribute('type', type);
             
             if (type === 'text') {
                 togglePasswordBtn.innerHTML = `
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.878 9.878L3 3m6.878 6.878L21 21"></path>
                     </svg>
                 `;
             } else {
                 togglePasswordBtn.innerHTML = `
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
                     </svg>
